--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -4,11 +4,11 @@
   margin-top: $spacer * 2;
   padding: $spacer * 2;
   text-align: center;
-  color: rgba(255, 255, 255, 0.2);
-  border-top: dotted 1px rgba(255, 255, 255, 0.1);
+  background-color: #171717;
 
   p {
-    font-size: 90%;
+    font-size: 80%;
     margin: 0;
+    color: rgba(127, 127, 127, 0.3);
   }
 }
