--- a/src/components/Header/SearchBar/SearchBar.module.scss
+++ b/src/components/Header/SearchBar/SearchBar.module.scss
@@ -28,12 +28,12 @@
 
 .searchLayout {
   background-color: rgba(0, 0, 0, 0.8);
-  position: fixed;
+  position: absolute;
   width: 100%;
   height: 100vh;
   top: 160px;
   left: 0;
-  z-index: 1;
+  z-index: 10;
 }
 
 @keyframes fadeInOpacity {
