--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -2,7 +2,7 @@
 
 .footer {
   margin-top: $spacer * 2;
-  padding: $spacer * 2;
+  padding: ($spacer * 2) $spacer 100px $spacer;
   text-align: center;
   background-color: #171717;
 
