--- a/src/components/Header/SearchBar/SearchBar.module.scss
+++ b/src/components/Header/SearchBar/SearchBar.module.scss
@@ -24,6 +24,15 @@
     color: white;
     background-color: rgba(255, 255, 255, 0.3);
   }
+
+  input[type="number"] {
+    -moz-appearance: textfield;
+  }
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+    margin: 0;
+  }
 }
 
 .searchLayout {
